# watcher

./: .gitignore  justfile  map.excalidraw  plan.md  watcher.code-workspace
.github/workflows/: ci-add-endpoint.yaml  ci-cli.yaml  ci-observe-endpoint.yaml  ci-signal-updated.yaml  ci-state-updated.yaml  ci-watcher.yaml  tests.yaml
cli/: Cargo.toml  github-action.yaml
cli/src/: cli.rs  main.rs
functions/add-endpoint/: Cargo.toml  github-action.yaml
functions/add-endpoint/terraform/: aws.tf  main.tf  variables.tf
functions/execute-command/: Cargo.toml  github-action.yaml
functions/execute-command/src/: main.rs
functions/observe-endpoint/: Cargo.toml  github-action.yaml
functions/observe-endpoint/src/: main.rs
functions/observe-endpoint/terraform/: aws.tf  main.tf  variables.tf
functions/send-signal/: Cargo.toml  github-action.yaml
functions/send-signal/src/: main.rs
functions/send-signal/terraform/: aws.tf  main.tf  variables.tf
functions/signal-updated/: Cargo.toml
functions/signal-updated/src/: main.rs
functions/signal-updated/terraform/: aws.tf  main.tf  variables.tf
functions/state-updated/: Cargo.toml
functions/state-updated/src/: main.rs
functions/state-updated/terraform/: aws.tf  main.tf  variables.tf
functions/witness-source/: Cargo.toml  github-action.yaml
functions/witness-source/src/: main.rs
functions/witness-source/terraform/: aws.tf  variables.tf
infra/core/: aws.tf  dynamodb.tf  iam.tf  s3.tf  scheduler.tf  sns.tf  sqs.tf  variables.tf
infra/modules/lambda/: iam.tf  lambda.tf  outputs.tf  vars.tf
infra/spacelift/: main.tf
infra/spacelift/aws_integration/: main.tf
infra/spacelift/meta/: .terraform.lock.hcl  main.tf
watcher/: Cargo.toml  github-action.yaml
watcher/src/: application.rs  config.rs  lib.rs  messaging.rs  meta_repo.rs  repository.rs  scheduling.rs  source.rs  storage.rs
watcher/src/ext/: discord.rs  mod.rs
watcher/src/ext/rss/: mod.rs  source.rs  state.rs
watcher/src/sink/: discord.rs  mod.rs
watcher/src/types/: broadcast.rs  commands.rs  events.rs  mod.rs  node.rs  observation.rs  sink.rs
watcher/src/types/edge/: asserted.rs  emission.rs  last_signal.rs  measurement.rs  mod.rs  send.rs  sent.rs  subscription.rs  witnessed.rs
watcher/src/types/node/: broadcast.rs  endpoint.rs  mod.rs  observation.rs  signal.rs  sink.rs  source.rs  state.rs
