[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.113"
watcher = { path = "../watcher", features = ["fake"] }

# probably get rid of these later
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
aws-sdk-dynamodb = "1.13.1"
clap = { version = "4.4.18", features = ["derive"] }
