[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.113"
watcher = { path = "../watcher" }

aws-config = { version = "1.1.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.14.0"
tokio = { version = "1.36.0", features = ["full"] }

# probably get rid of these later
serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
clap = { version = "4.5.1", features = ["derive"] }
rand = "0.8.5"
chrono = { version = "0.4.34", features = ["serde"] }
envconfig = "0.10.0"
serde = { version = "1.0.196", features = ["derive"] }
