[package]
name = "watcher"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }

aws-sdk-dynamodb = "1.13.1"
fake = { version = "2.9.2", features = ["derive", "chrono", "http"], optional=true}

[features]
default = []
fake = ["dep:fake"]

[dev-dependencies]
fake = { version = "2.9.2", features = ["derive", "chrono", "http"] }
