[package]
name = "observe-endpoint"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-sdk-s3 = "1.15.0"

lambda_runtime = "0.9.2"
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls", "json"] }
serde = "1.0.196"
tokio = { version = "1.36.0", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter", "fmt"] }
aws-config = { version = "1.1.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.14.0"

watcher = { path = "../../watcher"}
